<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jp.smartgpsapp.fragments.MyAccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <!--The user information area -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username" />

                    <TextView
                        android:id="@+id/userNameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/callsign" />

                    <TextView
                        android:id="@+id/callsignTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

            </LinearLayout>
        <!--The user function area -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="150dp">

            <Button
                android:id="@+id/editProfileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/editProfile"/>
            <Button
                android:id="@+id/settingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/setting"/>
            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/logout"/>


        </LinearLayout>

    </LinearLayout>


</FrameLayout>
