<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jp.smartgpsapp.fragments.BtSettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- switch and button area -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center">
             <!-- switch button area -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- enable/disable bluetooth switch button area -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btState" />
                    <Switch
                        android:id="@+id/btStateSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                    <TextView
                        android:id="@+id/btFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btFlag" />
                </LinearLayout>

            </LinearLayout>
             <!-- Button area -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">

                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/searchBtn"
                     android:text="@string/searchDevice"/>
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/listDeviceBtn"
                     android:text="@string/listPairedDevice"/>
             </LinearLayout>
         </LinearLayout>

        <!-- display area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
           <!-- Display paired devices area -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/displayPaired"/>

                <ListView
                    android:id="@+id/pairedDeviceLt"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

            </LinearLayout>
            <!-- Display available devices area -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otherDevice" />
                <ListView
                    android:id="@+id/availableDeviceLt"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
