<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jp.smartgpsapp.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <!--"Log in label" area-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/appTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15pt"
                android:layout_marginLeft="100dp"/>
        </LinearLayout>

        <!--button area-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"/>

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

